# sixs_json

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.sh  make.bash  meta.yaml  packaging.md  pyproject.toml  setup.py  setup.py.legacy
6sV2.1/: Makefile  main.f
py_wrap/: __init__.py
recipe/sixs-json/: meta.yaml
sixs_json/: __init__.py  wrap.py
sixs_wrap/: __init__.py  wrap.py
test/: test_wrap.py
